# planar_bmm

./: .gitignore  CMakeLists.txt  README.txt  recompile_delete_old.sh
16833_project_report/: main.tex  ref.bib
OpenNI2/Include/Driver/: libPS1080.so.0  libPSLink.so.0
isam/: CMakeLists.txt
lcmtypes/: xtion_rgbd_t.lcm
normals/: info.txt
paper/: ieeeconf.cls  planarslam.lyx
paper/stats/: Makefile  batch_dl_min_abs.txt  batch_dl_min_rel.txt  batch_gn_min_abs.txt  batch_gn_min_rel.txt  batch_lm_min_abs.txt  batch_lm_min_rel.txt  batch_lm_ovr_abs.txt  batch_lm_ovr_rel.txt  incr_gn.txt  incr_isam.txt  plots.gp  stats_stairs.txt  tgn.txt  tsrs.txt
src/: Camera.cpp  Camera.h  LCMListen.cpp  Logger.cpp  Logger.h  Mapper.cpp  Mapper.h  Plane3d.h  Simulation.cpp  Simulation.h  Visualizer.cpp  Visualizer.h  main.cpp  planes.cpp  planes.h  simulate.cpp  test.cpp
